# arnold_shaders_dev

./: CMakeLists.txt  README.md  deploy_run.sh  run.sh
shaders/simple_shader/: shadow_tint.cpp  simple_shader.cpp
test_scenes/: simple_scene.ass
